# axiom-ai

./: .env.example  .gitignore  CLAUDE.md  DOLT_REMOTE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manifest  package-lock.json  package.json  pyproject.toml
.beads/: beads.left.meta.json  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.husky/: pre-commit  pre-push
agents/: __init__.py  base_agent.py  claude_agent.py  exploiter_agent.py  random_agent.py
axiom/: __init__.py  config.py  exceptions.py  logging.py  models.py
docs/: architecture-diagram.mmd  architecture.html  demo-runbook.md  robustness.md  writeup.md
reports/: robustness.json  robustness_live.json  robustness_live_discovery2.json
scripts/: benchmark.py  hack_fix_loop.py  parallel_benchmark.py  replay_trajectory.py  run_demo.py  run_robustness.py
static/: demo.html  index.html  replay.html  robustness.html  theme.css
tests/: conftest.py  robustness_fixtures.py  test_agent_artifacts.py  test_anchors.py  test_api.py  test_axiomchat_env.py  test_axiomchat_integration.py  test_best_of_n.py  test_cli_env.py  test_core.py  test_corpus.py  test_dom_parser.py  test_exploit_catalog.py  test_exploit_library.py  test_exploiter_agent.py  test_gate.py  test_gemini_backoff.py  test_hack_fix_loop.py  test_hardening.py  test_json_env.py  test_judge_reward.py  test_judge_substudy.py  test_labeler.py  test_llm_judge.py  test_metrics.py  test_models.py  test_oracle_client.py  test_oracles.py  test_parallel_runner.py  test_proxies.py  test_report.py  test_reward_tasks.py  test_robustness_corpus.py  test_robustness_serving.py  test_run_robustness_harness.py  test_seeds.py  (+1 more)
(+126 files in other folders)
