[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom-ai"
version = "0.1.0"
description = "Training gym for AI agents operating in real digital environments"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ayush Gundecha", email = "ayushgundecha123@gmail.com" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
    "playwright>=1.49.0",
    "anthropic>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "types-PyYAML>=6.0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["axiom"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
]

[tool.ruff.lint.isort]
known-first-party = ["axiom"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (Docker, todo-app)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
